--- a/manifest.json
+++ b/manifest.json
@@ -23,8 +23,8 @@
 
     "description" : "Down instagram image in one clicl",
     "icons" : {
-        "16" : "icons/instagram.png",
-        "128" : "icons/instagram.png"
+        "16" : "icons/icon16.png",
+        "128" : "icons/icon128.png"
         },
 
     "browser_action" : {
