--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
 
     "content_scripts" : [{
         "matches" : ["https://www.instagram.com/*"],
+        "run_at" : "document_idle",
         "js" : ["jquery.js","main.js"],
         "css" : ["button.css"]
     }
