--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
     "name": "InstaGet",
-    "version": "0.1.0",
-    "description": "Download any Instagram image/video in effortless way! - Updated 2017/08/10",
+    "version": "1.0.0",
+    "description": "Download any Instagram image/video in effortless way! - Updated 2018/08/11",
     "author": "Ho Vu - qwerty22121998@gmail.com",
     "homepage_url": "https://www.facebook.com/khanhvu2212",
     "icons": {
@@ -13,21 +13,20 @@
         "downloads",
         "background"
     ],
-    "content_scripts": [
-        {
-            "matches": [
-                "https://www.instagram.com/*"
-            ],
-            "run_at": "document_idle",
-            "js": [
-                "scripts/jquery.js",
-                "scripts/main.js"
-            ],
-            "css": [
-                "styles/button.css"
-            ]
-        }
-    ],
+    "content_security_policy": "script-src 'self'; default-src 'self'",
+    "background": {
+        "scripts": ["scripts/background.js"]
+    },
+    "content_scripts": [{
+        "matches": [
+            "https://www.instagram.com/*"
+        ],
+        "run_at": "document_end",
+        "js": [
+            "scripts/jquery.js",
+            "scripts/main.js"
+        ]
+    }],
     "browser_action": {
         "default_title": "InstaGet Plugin"
     }
