--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
     "name": "InstaGet",
-    "version": "1.1.0",
-    "description": "Download any Instagram image/video in effortless way! - Updated 2018/08/14",
+    "version": "2.0.0",
+    "description": "Download any Instagram image/video in effortless way!",
     "author": "Ho Vu - qwerty22121998@gmail.com",
     "homepage_url": "https://www.facebook.com/khanhvu2212",
     "icons": {
